[gd_scene load_steps=20 format=2]

[ext_resource path="res://Cards/Skills/CalculusandProblemSolving.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Roboto_greek/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Keyboard/Shortcut_downArrow.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Keyboard/Shortcut_upArrow.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/ChallengeCard/ZoomInButton.gd" type="Script" id=5]
[ext_resource path="res://UI/ChallengeCard/ZoomOutButton.gd" type="Script" id=6]
[ext_resource path="res://Fotos/zoom_out_selected.png" type="Texture" id=7]
[ext_resource path="res://Fotos/zoom_out.png" type="Texture" id=8]
[ext_resource path="res://Fotos/zoom.png" type="Texture" id=9]
[ext_resource path="res://Cards/pt/Photos/A Bola.png" type="Texture" id=10]
[ext_resource path="res://Fotos/zoom_selected.png" type="Texture" id=11]
[ext_resource path="res://Sounds/kenney_interfacesounds/Audio/open_004.ogg" type="AudioStream" id=12]
[ext_resource path="res://Assets/DiDaCityPack_Exterior/Models/City/TextureAtlas - Metallic.png" type="Texture" id=13]
[ext_resource path="res://Fonts/greekFont_bold.tres" type="DynamicFont" id=14]
[ext_resource path="res://UI/AdminArea/CardTemplate.gd" type="Script" id=15]
[ext_resource path="res://Fotos/DiceButton.png" type="Texture" id=16]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/Roboto_greek/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
outline_color = Color( 0.901961, 0.435294, 0.12549, 1 )
extra_spacing_char = 2
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 3
font_data = ExtResource( 2 )

[node name="BackgroundRect" type="Control"]
margin_right = 700.0
margin_bottom = 499.0
rect_min_size = Vector2( 700, 400 )
size_flags_horizontal = 6
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 701.0
margin_bottom = 405.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_right = 700.0
margin_bottom = 400.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardTitle2" type="Label" parent="VBoxContainer2/VBoxContainer"]
margin_right = 700.0
margin_bottom = 50.0
rect_min_size = Vector2( 180, 50 )
size_flags_vertical = 2
size_flags_stretch_ratio = 0.5
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "DESAFIO"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardColor" type="ColorRect" parent="VBoxContainer2/VBoxContainer"]
margin_left = 12.0
margin_top = 50.0
margin_right = 687.0
margin_bottom = 340.0
rect_min_size = Vector2( 675, 290 )
rect_pivot_offset = Vector2( 388.889, 585.786 )
size_flags_horizontal = 6
size_flags_vertical = 6
color = Color( 0.318603, 0.519531, 0.101471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardInfo" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer/CardColor"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -327.5
margin_top = -145.0
margin_right = 327.5
margin_bottom = 145.0
rect_min_size = Vector2( 0, 250 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinigameSound" type="AudioStreamPlayer" parent="VBoxContainer2/VBoxContainer/CardColor/CardInfo"]
stream = ExtResource( 12 )
volume_db = 5.0

[node name="Instructions" type="Label" parent="VBoxContainer2/VBoxContainer/CardColor/CardInfo"]
margin_top = 20.0
margin_right = 391.0
margin_bottom = 270.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 300, 250 )
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 8.44
custom_fonts/font = SubResource( 2 )
text = "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
valign = 1
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer/CardColor/CardInfo"]
margin_left = 395.0
margin_right = 655.0
margin_bottom = 290.0
rect_min_size = Vector2( 260, 290 )
custom_constants/separation = -50

[node name="ChallengeImage" type="TextureRect" parent="VBoxContainer2/VBoxContainer/CardColor/CardInfo/VBoxContainer"]
margin_left = 30.0
margin_top = 60.0
margin_right = 230.0
margin_bottom = 185.0
rect_min_size = Vector2( 200, 125 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 7.67
texture = ExtResource( 13 )
expand = true
stretch_mode = 1

[node name="zoomButtonIn" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer/CardColor/CardInfo/VBoxContainer"]
margin_left = 185.0
margin_top = 195.0
margin_right = 260.0
margin_bottom = 290.0
rect_min_size = Vector2( 75, 95 )
size_flags_horizontal = 10
size_flags_vertical = 10
custom_constants/separation = -15

[node name="ZoomInButton" type="TextureButton" parent="VBoxContainer2/VBoxContainer/CardColor/CardInfo/VBoxContainer/zoomButtonIn"]
margin_top = 6.0
margin_right = 75.0
margin_bottom = 88.0
rect_min_size = Vector2( 75, 82 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 2
size_flags_vertical = 6
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut_upArrow" parent="VBoxContainer2/VBoxContainer/CardColor/CardInfo/VBoxContainer/zoomButtonIn/ZoomInButton" instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.5
margin_top = -17.0
margin_right = 12.5
margin_bottom = 8.0

[node name="ZoomedInImage" type="TextureRect" parent="VBoxContainer2/VBoxContainer/CardColor/CardInfo"]
visible = false
margin_left = 77.0
margin_top = 5.0
margin_right = 577.0
margin_bottom = 285.0
rect_min_size = Vector2( 500, 280 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 5.52
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="zoomButton" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer/CardColor/CardInfo"]
visible = false
margin_left = 655.0
margin_top = 200.0
margin_right = 655.0
margin_bottom = 290.0
rect_min_size = Vector2( 0, 90 )
size_flags_horizontal = 10
size_flags_vertical = 10
custom_constants/separation = -10

[node name="ZoomOutButton" type="TextureButton" parent="VBoxContainer2/VBoxContainer/CardColor/CardInfo/zoomButton"]
visible = false
margin_right = 75.0
margin_bottom = 90.0
rect_min_size = Vector2( 75, 90 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.74
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 4
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut_downArrow" parent="VBoxContainer2/VBoxContainer/CardColor/CardInfo/zoomButton/ZoomOutButton" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.5
margin_top = -25.0
margin_right = 12.5

[node name="SkillInfo" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
margin_left = 297.0
margin_top = 340.0
margin_right = 402.0
margin_bottom = 400.0
rect_min_size = Vector2( 100, 60 )
size_flags_horizontal = 4
size_flags_vertical = 6
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberPoints" type="Label" parent="VBoxContainer2/VBoxContainer/SkillInfo"]
margin_top = 12.0
margin_right = 41.0
margin_bottom = 48.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "+ 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill" type="TextureRect" parent="VBoxContainer2/VBoxContainer/SkillInfo"]
margin_left = 55.0
margin_top = 5.0
margin_right = 105.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 1 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 404.0
margin_right = 700.0
margin_bottom = 504.0
custom_constants/separation = -100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditButton" type="TextureButton" parent="VBoxContainer2/HBoxContainer"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 100.0
size_flags_horizontal = 6
texture_normal = ExtResource( 16 )

[node name="EraseButton" type="TextureButton" parent="VBoxContainer2/HBoxContainer"]
margin_left = 450.0
margin_right = 550.0
margin_bottom = 100.0
size_flags_horizontal = 6
texture_normal = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 164.816
margin_top = 137.907
margin_right = 508.816
margin_bottom = 266.907
dialog_text = "Are you sure you want to erase the challenge "
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer2/HBoxContainer/EditButton" to="." method="edit_card"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/EraseButton" to="." method="check_erase_challenge"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="erase_challenge"]
